# DodgeBot

./: .gitignore  A1 - Final Project Proposal Template.docx  A1 - Final Project Proposal.docx  A2 - Functional Specification.docx  README.md  SpinningMotor.m  SpinningStick.asv  SpinningStick.m  camera_test.py  ~$ - Final Project Proposal Template.docx  ~$ - Final Project Proposal.docx
CAD_FILES/: AKM2G-51X-ACDNCA00.iam  AKM2G-5ACDNCA_F.ipt  Assembly3.iam  Ball Joint.ipt  Belt.ipt  Final AssemblyV5.iam  FrontPlateV2.ipt  Wheel_Consept.ipt
Camera Testing/: camera_calibration.py  camera_test.py
Camera_Testing/: Dodgebot_Algorithm.py  camera_calibration.py  camera_communication.py  camera_distortion_testing.py  camera_framerate.py  camera_gpu_test.py  camera_optimization_testing.py  camera_proportion_test.py  camera_test.py  camera_test2.py  camera_test3.py  dodgebot_camera.txt  mapx.npy  mapy.npy  rotation_test.asv  rotation_test.m  test.py
Documentation/: A3 - Software Overview.docx
Electronics/: BOM.xlsx  Schematic V1.sch
STMCODE/: .mxproject  STM32F746ZGTX_RAM.ld  STMCODE Debug.launch  STMCODE.ioc
STM_Code/: .mxproject  STM_Code.ioc
brains/: .project  main.py  pyproject.toml
brains/src/communication/: codes.py  connection.py  message.py  protocol.py
brains/src/game/: game.py  state.py
brains/src/gui/: gui.py  menu.py  timer.py
brains/src/pathfiner/: pathfinder.py  test_pathfinder.py  vision.py
brains/src/vision/: vision.py
brains/tests/communication/: test_connection.py  test_protocol.py
brains/tests/game/: mockgui.py  test_game.py
(+464 files in other folders)
