[tool.poetry]
name = "brains"
version = "0.1.0"
description = ""
authors = ["CarlosACJ55 <CarlosACJ55@icloud.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.2.2"
kmeans-pytorch = "^0.3"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.2"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
